# python-project-50

./: .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  file2.yaml  gen_diff.py  parser.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gen_diff.py  test_generate_diff.py
tests/test_data/: file1.json  file1.yaml  file2.json  file2.yaml  file2.yml
